--- a/DemoMVC/Views/BookStore/Detail.cshtml
+++ b/DemoMVC/Views/BookStore/Detail.cshtml
@@ -1,11 +1,130 @@
-﻿@{
+﻿@model DemoMVC.Models.Book
+@{
     ViewBag.Title = "Detail";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<h2>Thong tin chi tiet sach</h2>
-
-<h3>Ten sach: @Model.Name</h3>
-
-
-
+<div class="main">
+    <div class="main">
+        <div class="content">
+            <div class="content_top">
+                <div class="back-links">
+                    <p><a href="index.html">Home</a> >>>> <a href="/san-pham/">Electronics</a></p>
+                </div>
+                <div class="clear"></div>
+            </div>
+            <div class="section group">
+                <div class="cont-desc span_1_of_2">
+                    <div class="product-details">
+                        <div class="grid images_3_of_2">
+                            <div id="container">
+                                <div id="products_example">
+                                    <div id="products">
+                                        <div class="slides_container">
+                                            <a href="#" target="_blank"><img src="/images/@Model.CoverImage" alt=" " /></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="desc span_3_of_2">
+                            <h2>Lorem Ipsum is simply dummy text </h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                            <div class="price">
+                                <p>Price: <span>$500</span></p>
+                            </div>
+                            <div class="share-desc">
+                                <div class="button"><span><a href="@Url.Action("AddItem", "Cart", new { @BookId = Model.Id, @url = Request.Url.ToString()})">Add to Cart</a></span></div>
+                                <div class="clear"></div>
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="product_desc">
+                        <div id="horizontalTab">
+                            <ul class="resp-tabs-list">
+                                <li>Product Details</li>
+                                <li>Product Reviews</li>
+                                <div class="clear"></div>
+                            </ul>
+                            <div class="resp-tabs-container">
+                                <div class="product-desc">
+                                    <p>Lorem Ipsum is simply dummy text of the <span>printing and typesetting industry</span>. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, <span>when an unknown printer took a galley of type and scrambled</span> it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<span> It has survived not only five centuries</span>, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                                </div>
+                                <div class="review">
+                                    <h4>Lorem ipsum Review by <a href="#">Finibus Bonorum</a></h4>
+                                    <ul>
+                                        <li>Price :<a href="#"><img src="images/price-rating.png" alt="" /></a></li>
+                                        <li>Value :<a href="#"><img src="images/value-rating.png" alt="" /></a></li>
+                                        <li>Quality :<a href="#"><img src="images/quality-rating.png" alt="" /></a></li>
+                                    </ul>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                                    <div class="your-review">
+                                        <h3>How Do You Rate This Product?</h3>
+                                        <p>Write Your Own Review?</p>
+                                        <form>
+                                            <div>
+                                                <span><label>Nickname<span class="red">*</span></label></span>
+                                                <span><input type="text" value=""></span>
+                                            </div>
+                                            <div>
+                                                <span><label>Summary of Your Review<span class="red">*</span></label></span>
+                                                <span><input type="text" value=""></span>
+                                            </div>
+                                            <div>
+                                                <span><label>Review<span class="red">*</span></label></span>
+                                                <span><textarea> </textarea></span>
+                                            </div>
+                                            <div>
+                                                <span><input type="submit" value="SUBMIT REVIEW"></span>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <script type="text/javascript">
+    $(document).ready(function () {
+                            $('#horizontalTab').easyResponsiveTabs({
+                                type: 'default', //Types: default, vertical, accordion
+                                width: 'auto', //auto or any width like 600px
+                                fit: true   // 100% fit in a container
+                            });
+                        });</script>
+                    <!-- sản phẩm liên quan -->
+                    <div class="content_bottom">
+                        <div class="heading">
+                            <h3>Related Products</h3>
+                        </div>
+                        <div class="see">
+                            <p><a href="#">See all Products</a></p>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="section group">
+                        <div class="grid_1_of_4 images_1_of_4">
+                            <a href="#"><img src="images/new-pic1.jpg" alt=""></a>
+                            <div class="price" style="border:none">
+                                <div class="add-cart" style="float:none">
+                                    <h4><a href="#">Add to Cart</a></h4>
+                                </div>
+                                <div class="clear"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end sp liên quan -->
+                </div>
+                @*<!-- Danh muc thuong hieu ben trai -->*@
+                @*<!-- Danh muc thuong hieu ben trai -->*@
+                <div class="rightsidebar span_3_of_1">
+                    <h2>CATEGORIES</h2>
+                    <ul class="side-w3ls">
+                        <li><a href="#">Mobile Phones</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
