--- a/DemoMVC/Views/Shared/_LayoutUser.cshtml
+++ b/DemoMVC/Views/Shared/_LayoutUser.cshtml
@@ -42,16 +42,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="logo">
                     <a href="index.html"><img src="images/logo.png" alt="" /></a>
                 </div>
+
                 <div class="cart">
                     <p>
-                        Welcome to our Online Store! <span>Cart:</span><div id="dd" class="wrapper-dropdown-2">
-                            0 item(s) - $0.00
+                        Welcome to our Online Store! @Session["Account"] <span>Cart:</span><div id="dd" class="wrapper-dropdown-2">
+                            0 item(@ViewBag.Total) - $0.00
                             <ul class="dropdown">
                                 <li>you have no items in your Shopping cart</li>
                             </ul>
                         </div>
                     </p>
                 </div>
+
                 <script type="Scripts">
                     function DropDown(el) {
                     this.dd = el;
